--- a/grape-kernel/src/main/resources/application.properties
+++ b/grape-kernel/src/main/resources/application.properties
@@ -3,12 +3,9 @@ server.sessionTimeout=300
 spring.mvc.ignore-default-model-on-redirect=true
 spring.mvc.locale=zh
 spring.mvc.dateFormat=yyyy-mm-dd
-
 spring.resources.cachePeriod=10
-
 #multipart.location=/var/files
 multipart.maxFileSize=10
-
 logging.file=../logs/app.log
 logging.level.org.springframework=INFO
 logging.level.com.avaje=INFO
@@ -19,9 +16,7 @@ logging.level.org.avaje.ebean.cache.QUERY=TRACE
 logging.level.org.avaje.ebean.cache.BEAN=TRACE
 logging.level.org.avaje.ebean.cache.COLL=TRACE
 logging.level.org.avaje.ebean.cache.NATKEY=TRACE
-
 application.devMode=true
-
 ebean.uuidStoreAsBinary=true
 ebean.databaseSequenceBatchSize=1
 ebean.logging.directory=logs
@@ -32,9 +27,8 @@ ebean.logging.iud=sql
 ebean.logging.query=sql
 ebean.logging.sqlquery=sql
 ebean.logging.txnCommit=none
-
 datasource.username=root
-datasource.password=
+datasource.password=123456
 datasource.databaseUrl=jdbc:mysql://localhost:3306/grape?useUnicode=true&characterEncoding=UTF-8
 datasource.databaseDriver=com.mysql.jdbc.Driver
 datasource.heartbeatSql=select 1
