add account, msg, mail plugin

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <modules>
-        <module>grape-kernel</module>
-        <module>grape-dict</module>
-    </modules>
 
     <parent>
         <groupId>io.spring.platform</groupId>
@@ -19,6 +14,7 @@
     <groupId>org.grape</groupId>
     <artifactId>grape-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <prerequisites>
         <maven>3.2.0</maven>
@@ -29,6 +25,14 @@
         <java.encoding>UTF-8</java.encoding>
         <project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
     </properties>
+
+    <modules>
+        <module>grape-kernel</module>
+        <module>grape-dict</module>
+        <module>grape-account</module>
+        <module>grape-msg</module>
+        <module>grape-mail</module>
+    </modules>
 
     <dependencyManagement>
         <dependencies>
