--- a/grape-kernel/src/main/resources/application.properties
+++ b/grape-kernel/src/main/resources/application.properties
@@ -32,3 +32,9 @@ datasource.password=123456
 datasource.databaseUrl=jdbc:mysql://localhost:3306/grape?useUnicode=true&characterEncoding=UTF-8
 datasource.databaseDriver=com.mysql.jdbc.Driver
 datasource.heartbeatSql=select 1
+mail.host=smtp.excenergy.com
+mail.port=465
+mail.username=lipengpeng@excenergy.com
+mail.password=Public1!
+mail.defaultEncoding=UTF-8
+mail.enableSsl=true
