--- a/grape-kernel/pom.xml
+++ b/grape-kernel/pom.xml
@@ -64,6 +64,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.auto.service</groupId>
+            <artifactId>auto-service</artifactId>
+            <version>1.0-rc3</version>
+            <!--<optional>true</optional>-->
+        </dependency>
     </dependencies>
 
 </project>
